--- a/04_vector_store_db/01_Faiss_vs_db.ipynb
+++ b/04_vector_store_db/01_Faiss_vs_db.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\RAMU\\AppData\\Local\\Temp\\ipykernel_1004\\4111092757.py:3: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "C:\\Users\\RAMU\\AppData\\Local\\Temp\\ipykernel_6340\\4111092757.py:3: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
       "  ollama_embedder = OllamaEmbeddings(model = 'llama3.2:1b')\n"
      ]
     }
@@ -185,9 +185,9 @@
    "outputs": [],
    "source": [
     "### Saving And Loading\n",
-    "faiss_db.save_local(\"faiss_index\")\n",
+    "faiss_db.save_local(\"faiss_DB\")\n",
     "\n",
-    "new_db=FAISS.load_local(\"faiss_index\",ollama_embedder,allow_dangerous_deserialization=True)\n",
+    "new_db=FAISS.load_local(\"faiss_DB\",ollama_embedder,allow_dangerous_deserialization=True)\n",
     "docs=new_db.similarity_search(input_text)"
    ]
   }
