--- a/04_vector_store_db/01_Faiss_vs_db.ipynb
+++ b/04_vector_store_db/01_Faiss_vs_db.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing required libreries.\n",
     "from langchain_community.document_loaders import TextLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_community.embeddings import OllamaEmbeddings\n",
@@ -39,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\RAMU\\AppData\\Local\\Temp\\ipykernel_6340\\4111092757.py:3: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "C:\\Users\\RAMU\\AppData\\Local\\Temp\\ipykernel_14380\\4111092757.py:3: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
       "  ollama_embedder = OllamaEmbeddings(model = 'llama3.2:1b')\n"
      ]
     }
