Similarity search on pandas DataFrame text column using LLMs

--- a/08_work_with_pandas_df_on_langchain/01_Similarity_search_on_pandas_df_with_llm.ipynb
+++ b/08_work_with_pandas_df_on_langchain/01_Similarity_search_on_pandas_df_with_llm.ipynb
@@ -41,19 +41,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import faiss\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sentence_transformers import SentenceTransformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load CSV File Using Pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Meditation and yoga can improve mental health</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fruits, whole grains and vegetables helps cont...</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>These are the latest fashion trends for this week</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vibrant color jeans for male are becoming a trend</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The concert starts at 7 PM tonight</td>\n",
+       "      <td>Event</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Navaratri dandiya program at Expo center in Mu...</td>\n",
+       "      <td>Event</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Exciting vacation destinations for your next trip</td>\n",
+       "      <td>Travel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Maldives and Srilanka are gaining popularity i...</td>\n",
+       "      <td>Travel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text category\n",
+       "0      Meditation and yoga can improve mental health   Health\n",
+       "1  Fruits, whole grains and vegetables helps cont...   Health\n",
+       "2  These are the latest fashion trends for this week  Fashion\n",
+       "3  Vibrant color jeans for male are becoming a trend  Fashion\n",
+       "4                 The concert starts at 7 PM tonight    Event\n",
+       "5  Navaratri dandiya program at Expo center in Mu...    Event\n",
+       "6  Exciting vacation destinations for your next trip   Travel\n",
+       "7  Maldives and Srilanka are gaining popularity i...   Travel"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('../data/sample_text.csv')\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply Embedding on the Text Column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Gen_AI\\LLM_course_from_KN\\Langchain_3.10\\lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\RAMU\\.cache\\huggingface\\hub\\models--sentence-transformers--all-mpnet-base-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dimention of text_vectors is : (8, 768)\n",
+      "The dimention of each vector in text_vectors : 768\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedder = SentenceTransformer(\"all-mpnet-base-v2\")\n",
+    "text_vectors = embedder.encode(data.text)\n",
+    "\n",
+    "print(f\"\"\"The dimention of text_vectors is : {text_vectors.shape}\n",
+    "The dimention of each vector in text_vectors : {text_vectors.shape[1]}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Euclidean Flat Indexer with Faiss:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_dim = text_vectors.shape[1]\n",
+    "vector_indexer = faiss.IndexFlatL2(vector_dim)\n",
+    "vector_indexer.add(text_vectors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve similar rows from the pandas DataFrame based on the query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vector distace: [[1.2629726 1.4028323]] \n",
+      "matched index numbers: [[2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"I wanna to by a shirt\"\n",
+    "\n",
+    "query_vector = embedder.encode(query)\n",
+    "reshaped_query_vector = np.array(query_vector).reshape(1,-1)\n",
+    "distace, idx_num = vector_indexer.search(reshaped_query_vector, k =2)\n",
+    "\n",
+    "print(f\"vector distace: {distace} \\nmatched index numbers: {idx_num}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> [[2 3]]\n",
+      "[[2, 3]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>These are the latest fashion trends for this week</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vibrant color jeans for male are becoming a trend</td>\n",
+       "      <td>Fashion</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text category\n",
+       "2  These are the latest fashion trends for this week  Fashion\n",
+       "3  Vibrant color jeans for male are becoming a trend  Fashion"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(idx_num), idx_num)\n",
+    "idx_num = idx_num.tolist()\n",
+    "print(idx_num)\n",
+    "\n",
+    "data.loc[idx_num[0]]"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Langchain_3.10",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
