updating pandas search

--- a/08_work_with_pandas_df_on_langchain/01_Similarity_search_on_pandas_df_with_llm.ipynb
+++ b/08_work_with_pandas_df_on_langchain/01_Similarity_search_on_pandas_df_with_llm.ipynb
@@ -40,6 +40,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* IndexFlatL2 is used for computing nearest neighbors based on the L2 distance (Euclidean distance).  \n",
+    "* faiss.IndexFlatL2 is a simple, brute-force index implementation\n",
+    "\n",
+    "\n",
+    "### Key Features of faiss.IndexFlatL2:\n",
+    "1. **Flat Index:** All vectors are stored in memory in their original form. It does not use any advanced data structures like trees or hash tables to organize vectors.\n",
+    "2. **Exact Search:** The search is exhaustive, meaning it calculates the L2 distance between the query vector and all vectors in the dataset to find the nearest neighbors.\n",
+    "3. **Euclidean Distance:** It uses the squared L2 norm to measure distances. Squared L2 distances are computed for efficiency since the square root step is omitted.  \n",
+    "\n",
+    "### How it Works Internally\n",
+    "1. **Initialization:**\n",
+    "\n",
+    "    * When you create an IndexFlatL2 object, it initializes an empty container to hold the vectors you want to index.\n",
+    "        \n",
+    "        ```python\n",
+    "        import faiss\n",
+    "        index = faiss.IndexFlatL2(d)  # d is the dimensionality of the vectors\n",
+    "        ```\n",
+    "2. **Adding Vectors:**\n",
+    "    * Internally, the index stores the vectors in a contiguous memory block for fast access once vectors added to index.\n",
+    "        \n",
+    "        ```python\n",
+    "        index.add(vectors) \n",
+    "        ```\n",
+    "3. **Search Process:**\n",
+    "\n",
+    "    * When you query the index using the search method, the index computes the squared L2 distance between the query vector(s) and every vector in the dataset.\n",
+    "    * The distances are computed in parallel for efficiency, taking advantage of modern CPU/GPU architectures.  \n",
+    "\n",
+    "        ```python\n",
+    "        distances, indices = index.search(query_vectors, k)\n",
+    "        ```\n",
+    "\n",
+    "    * k specifies the number of nearest neighbors to retrieve.\n",
+    "    * distances contains the squared L2 distances of the nearest neighbors.\n",
+    "    * indices contains the indices of the nearest neighbors\n",
+    "\n",
+    "4. **Distance Calculation:** \n",
+    "    * For a query vector 𝑞 and a dataset vector 𝑥, the squared L2 distance is computed as:\n",
+    "    $$\n",
+    "    \\|q - x\\|^2 = \\sum_{i=1}^d (q_i - x_i)^2\n",
+    "    $$\n",
+    "\n",
+    "\n",
+    "5. **Brute-Force Nature:**\n",
+    "\n",
+    "    * Every query vector is compared with all the dataset vectors. This ensures exact results but can be computationally expensive for large datasets.\n",
+    "    * It is suitable for smaller datasets or as a baseline for comparison with other indices (e.g., approximate methods like IndexIVFFlat)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
