--- a/06_Language_translation_with_LCEL/01_Language_translation_with_message_propt.ipynb
+++ b/06_Language_translation_with_LCEL/01_Language_translation_with_message_propt.ipynb
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Langchain_3.10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
